--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Intro</h1> 
-<p>My name is Madiha sabahat. I live in Sydney NSW. I like going for runs and I enjoy reading.
+<p>My name is Madiha sabahat. I live in Sydney NSW. I like going for runs and I enjoy reading.</p>
